Fixed a bug with 2 scrollbars and color on timeline

--- a/app/components/Banner/Banner.less
+++ b/app/components/Banner/Banner.less
@@ -352,7 +352,7 @@
 
 .banner {
     position: relative;
-    overflow-x: hidden;
+    overflow: hidden;
     [class$="-layer"] {
         position: absolute;
     }
